Update: Added threading to slightly improve speeds

--- a/MinecraftWikiScraper.ipynb
+++ b/MinecraftWikiScraper.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNSO2MSht1YwyeaZgis5Q06",
+      "authorship_tag": "ABX9TyM6IjIda+PAjPCkbNWKkdnb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,35 +30,16 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 70
-        },
-        "id": "SDH7j7ZgiyLT",
-        "outputId": "f686f1f1-41dd-490a-c5b9-db28d3244352"
+        "id": "SDH7j7ZgiyLT"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'\\n1. Scrape all of the text off the official Minecraft Wiki (not fandom)\\n2. Filter the text only important things\\n3. Feed the data into ChatGPT\\n4. Get the response from ChatGPT\\n5. Send response back\\n'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 90
-        }
-      ],
+      "outputs": [],
       "source": [
         "'''\n",
         "HOW TO USE:\n",
         "1. Type API key below\n",
         "2. Run\n",
         "'''\n",
-        "api_key = \"[INSERT API KEY HERE]\""
+        "api_key = \"[INSERT YOUR API KEY HERE]\""
       ]
     },
     {
@@ -82,7 +63,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UgLU7xGtrfIH",
-        "outputId": "9b4e0813-9164-46e3-fae2-af58dd2db1c2"
+        "outputId": "d09a6f0a-878f-4417-dd3d-3547a7f7fb5a"
       },
       "execution_count": null,
       "outputs": [
@@ -90,24 +71,38 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: chromedriver_autoinstaller in /usr/local/lib/python3.10/dist-packages (0.6.4)\n",
+            "Collecting chromedriver_autoinstaller\n",
+            "  Downloading chromedriver_autoinstaller-0.6.4-py3-none-any.whl (7.6 kB)\n",
             "Requirement already satisfied: packaging>=23.1 in /usr/local/lib/python3.10/dist-packages (from chromedriver_autoinstaller) (24.1)\n",
-            "Requirement already satisfied: selenium in /usr/local/lib/python3.10/dist-packages (4.22.0)\n",
-            "Requirement already satisfied: urllib3[socks]<3,>=1.26 in /usr/local/lib/python3.10/dist-packages (from selenium) (2.0.7)\n",
-            "Requirement already satisfied: trio~=0.17 in /usr/local/lib/python3.10/dist-packages (from selenium) (0.26.0)\n",
-            "Requirement already satisfied: trio-websocket~=0.9 in /usr/local/lib/python3.10/dist-packages (from selenium) (0.11.1)\n",
+            "Installing collected packages: chromedriver_autoinstaller\n",
+            "Successfully installed chromedriver_autoinstaller-0.6.4\n",
+            "Collecting selenium\n",
+            "  Downloading selenium-4.22.0-py3-none-any.whl (9.4 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.4/9.4 MB\u001b[0m \u001b[31m46.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: urllib3[socks]<3,>=1.26 in /usr/local/lib/python3.10/dist-packages (from selenium) (2.0.7)\n",
+            "Collecting trio~=0.17 (from selenium)\n",
+            "  Downloading trio-0.26.0-py3-none-any.whl (475 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m475.7/475.7 kB\u001b[0m \u001b[31m38.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting trio-websocket~=0.9 (from selenium)\n",
+            "  Downloading trio_websocket-0.11.1-py3-none-any.whl (17 kB)\n",
             "Requirement already satisfied: certifi>=2021.10.8 in /usr/local/lib/python3.10/dist-packages (from selenium) (2024.7.4)\n",
             "Requirement already satisfied: typing_extensions>=4.9.0 in /usr/local/lib/python3.10/dist-packages (from selenium) (4.12.2)\n",
             "Requirement already satisfied: websocket-client>=1.8.0 in /usr/local/lib/python3.10/dist-packages (from selenium) (1.8.0)\n",
             "Requirement already satisfied: attrs>=23.2.0 in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium) (23.2.0)\n",
             "Requirement already satisfied: sortedcontainers in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium) (2.4.0)\n",
             "Requirement already satisfied: idna in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium) (3.7)\n",
-            "Requirement already satisfied: outcome in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium) (1.3.0.post0)\n",
+            "Collecting outcome (from trio~=0.17->selenium)\n",
+            "  Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
             "Requirement already satisfied: sniffio>=1.3.0 in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium) (1.3.1)\n",
             "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium) (1.2.1)\n",
-            "Requirement already satisfied: wsproto>=0.14 in /usr/local/lib/python3.10/dist-packages (from trio-websocket~=0.9->selenium) (1.2.0)\n",
+            "Collecting wsproto>=0.14 (from trio-websocket~=0.9->selenium)\n",
+            "  Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
             "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in /usr/local/lib/python3.10/dist-packages (from urllib3[socks]<3,>=1.26->selenium) (1.7.1)\n",
-            "Requirement already satisfied: h11<1,>=0.9.0 in /usr/local/lib/python3.10/dist-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium) (0.14.0)\n"
+            "Collecting h11<1,>=0.9.0 (from wsproto>=0.14->trio-websocket~=0.9->selenium)\n",
+            "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m6.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: outcome, h11, wsproto, trio, trio-websocket, selenium\n",
+            "Successfully installed h11-0.14.0 outcome-1.3.0.post0 selenium-4.22.0 trio-0.26.0 trio-websocket-0.11.1 wsproto-1.2.0\n"
           ]
         },
         {
@@ -116,7 +111,7 @@
             "text/plain": []
           },
           "metadata": {},
-          "execution_count": 91
+          "execution_count": 2
         }
       ]
     },
@@ -127,7 +122,8 @@
         "import chromedriver_autoinstaller\n",
         "from selenium import webdriver\n",
         "from bs4 import BeautifulSoup\n",
-        "import re"
+        "import re\n",
+        "import threading"
       ],
       "metadata": {
         "id": "0OFVW-6fjfdJ"
@@ -185,7 +181,7 @@
       "metadata": {
         "id": "HiA_Jls0kXch"
       },
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -262,9 +258,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d6880f3c-f6ae-4ac9-867d-5080384811d5"
+        "outputId": "447f773c-281f-4b70-e86b-129f18c539f4"
       },
-      "execution_count": 98,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,12 +268,12 @@
           "text": [
             "Collecting openai\n",
             "  Downloading openai-1.35.14-py3-none-any.whl (328 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m328.5/328.5 kB\u001b[0m \u001b[31m5.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m328.5/328.5 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
             "Requirement already satisfied: distro<2,>=1.7.0 in /usr/lib/python3/dist-packages (from openai) (1.7.0)\n",
             "Collecting httpx<1,>=0.23.0 (from openai)\n",
             "  Downloading httpx-0.27.0-py3-none-any.whl (75 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m8.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.6/75.6 kB\u001b[0m \u001b[31m5.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (2.8.2)\n",
             "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from openai) (1.3.1)\n",
             "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.4)\n",
@@ -287,7 +283,7 @@
             "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2024.7.4)\n",
             "Collecting httpcore==1.* (from httpx<1,>=0.23.0->openai)\n",
             "  Downloading httpcore-1.0.5-py3-none-any.whl (77 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.9/77.9 kB\u001b[0m \u001b[31m7.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m77.9/77.9 kB\u001b[0m \u001b[31m5.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.10/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
             "Requirement already satisfied: annotated-types>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
             "Requirement already satisfied: pydantic-core==2.20.1 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.20.1)\n",
@@ -306,7 +302,7 @@
       "metadata": {
         "id": "PH9LtoSMvpNr"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -327,7 +323,7 @@
       "metadata": {
         "id": "r9r5Q9XGxE5b"
       },
-      "execution_count": 105,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -380,7 +376,7 @@
       "metadata": {
         "id": "KM4r-XTxxPFQ"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -394,18 +390,30 @@
         "  subject = summary[0]\n",
         "  summary = summary[1]\n",
         "\n",
+        "  info = [None]\n",
+        "  paragraphs = [None]\n",
+        "\n",
+        "  threads = [\n",
+        "      threading.Thread(target=lambda: info.__setitem__(0, extract_info_box(soup))),\n",
+        "      threading.Thread(target=lambda: paragraphs.__setitem__(0, extract_main_paragraph(soup)))\n",
+        "  ]\n",
+        "\n",
         "  url = search_for_page(subject)\n",
         "  soup = get_soup(url)\n",
-        "  info = extract_info_box(soup)\n",
-        "  paragraphs = extract_main_paragraph(soup)\n",
         "\n",
-        "  summary = make_chatgpt_request(generate_output + summary + \"\\n```\" + \"\\n\".join(info) + \"\\n\".join(paragraphs))\n",
+        "  threads[0].start()\n",
+        "  threads[1].start()\n",
+        "\n",
+        "  threads[0].join()\n",
+        "  threads[1].join()\n",
+        "\n",
+        "  summary = make_chatgpt_request(generate_output + summary + \"\\n```\" + \"\\n\".join(info[0]) + \"\\n\".join(paragraphs[0]))\n",
         "  return summary"
       ],
       "metadata": {
         "id": "zaMdD7Du07fS"
       },
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -417,17 +425,34 @@
       "metadata": {
         "id": "Ur84CyC81ar5"
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "main()"
+      ],
       "metadata": {
-        "id": "t9LG7Le9_eof"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XfJzW196hVJ-",
+        "outputId": "8d888080-f09a-48f7-e314-5065b9ec703c"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What would you like to ask? What is dirt?\n",
+            "Summary: What is dirt used for in Minecraft?\n",
+            "\n",
+            "Answer: Dirt is primarily used for farming in Minecraft, but due to its abundance, it can also be used as a readily available building block.\n"
+          ]
+        }
+      ]
     }
   ]
 }
